--- a/robo.html
+++ b/robo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Dancing Robot</h1>
+    <h1><marquee>"Dancing Robot!!!</marquee></h1>
    <div class="container">
     <div class="face">
         <div class="eyes">
